infra/k8s/address-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address-mongo-depl
spec:
  selector:
    matchLabels:
      app: mongo-address
  template:
    metadata:
      labels:
        app: mongo-address
    spec:
      containers:
        - name: mongo-address
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: address-mongo-srv
spec:
  selector:
    app: mongo-address
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
