infra/k8s/shopcart-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopcart-depl
spec:
  selector:
    matchLabels:
      app: shopcart
  template:
    metadata:
      labels:
        app: shopcart
    spec:
      containers:
        - name: shopcart
          image: sluis117/shopcart
---
apiVersion: v1
kind: Service
metadata:
  name: shopcart-srv
spec:
  selector:
    app: shopcart
  ports:
    - name: shopcart
      protocol: TCP
      port: 3000
      targetPort: 3000
