infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/address/?(.*)
            backend:
              serviceName: address-srv
              servicePort: 3000
          - path: /api/product/?(.*)
            backend:
              serviceName: product-srv
              servicePort: 3000
          - path: /api/shopcart/?(.*)
            backend:
              serviceName: shopcart-srv
              servicePort: 3000
          - path: /api/order/?(.*)
            backend:
              serviceName: order-srv
              servicePort: 3000
